<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".Activity3">

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="457dp"
        android:layout_marginBottom="272dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="80dp"
            android:layout_marginTop="150dp"
            android:text="@string/motas"
            android:textSize="36sp"
            android:textStyle="bold|italic"
            android:layout_marginStart="80dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="136dp"

            android:layout_marginTop="50dp"
            android:src="@drawable/motas2"
            android:contentDescription="TODO" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="147dp"
        android:layout_marginTop="480dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/buttonAdic"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:background="@android:color/background_dark"
            android:text="@string/add"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="50dp" />

        <Button
            android:id="@+id/buttonGerir"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginLeft="50dp"
            android:background="@android:color/background_dark"
            android:text="@string/gerir"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="50dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>